# sd

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  normalize.py  pyproject.toml  pytest.ini  test_normalize.py
.github/: dependabot.yml
.github/workflows/: python-tests.yml
src/sd.egg-info/: PKG-INFO  SOURCES.txt
src/sd/sd.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/sdsrc/: api.py  cli.py  normalize.py  textutils.py
src/sdsrc/templates/: ui.html
tests/: test_normalize.py  test_textutils.py
