[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sdsrc"
version = "0.0.1"
description = "Whitespace normalizer kata"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest",
    "pre-commit"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
